# fmc-layer-composer

./: .gitignore  README.md  pyproject.toml  requirements.txt  streamlit_app.py
fmc_layer_composer/: __init__.py  app.py
fmc_layer_composer/composer/: __init__.py  csv_parser.py  diagnostics.py  executor.py  fuzzy.py  matcher.py  models.py  naming.py  planner.py  reports.py  resolution.py  sanity.py  signatures.py  sqlite_cache.py  state.py  utils.py
fmc_layer_composer/fmc/: __init__.py  auth.py  client.py  domains.py  policies.py  rules.py
fmc_layer_composer/ui/: __init__.py  analysis.py  commit.py  connection.py  downloads.py  session_state.py  source_selection.py
tests/: test_csv_parser.py  test_executor_verification.py  test_fmc_rules.py  test_fuzzy.py  test_matcher.py  test_multi_rule_override.py  test_pagination.py  test_planner.py  test_reports.py  test_sanitizer.py  test_sanity.py  test_signatures.py  test_state.py
